responsiveness header angepasst.

--- a/angebot.html
+++ b/angebot.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BÄRNLÄBT Angebot</title>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <title>unser Angebot</title>
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-    <link rel="stylesheet" href="../CSS/angebot.css">
+    <link rel="stylesheet" href="CSS/angebot.css">
+    <link rel="icon" href="Images/Logo.png">
 </head>
 
 
@@ -16,18 +17,18 @@
     <header>
         <section class="toolbar">
             <div class="toolbarLeft">
-                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
-            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
             </div>
         </section>
 
-        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="home.html" class="button">Home</a>
+            <a href="Index.html" class="button">Home</a>
             <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
             <a href="ueberuns.html" class="button">Über uns</a>
             <a href="kontakt.html" class="button">Kontakt</a>
@@ -44,14 +45,14 @@
             </article>
             <article class="mapKalender">
 
-                <img src="../Images/Logo.png" alt="Eventkarte" class="eventKarte">
-                <img src="../Images/Logo.png" alt="Eventkalender" class="eventKarte">
+                <img src="Images/Logo.png" alt="Eventkarte" class="eventKarte">
+                <img src="Images/Logo.png" alt="Eventkalender" class="eventKarte">
 
             </article>
 
             <article class="suchbox">
                 <p>Uf was häsch bock?</p>
-                <img src="../Images/Icons/Profil.png" alt="suche" id="suchIcon">
+                <img src="Images/Icons/Profil.png" alt="suche" id="suchIcon">
 
             </article>
 
@@ -87,7 +88,7 @@
                 Veranstaltung auf öffentlich.</p>
             <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
         </article>
-        <img src="../Images/Angebot/iPhoneBeerpong.png"
+        <img src="Images/Angebot/iPhoneBeerpong.png"
             alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird" id="beerpong">
         <h3 id="verein">«e Verein fäggt, imfau!»</h3>
         <article class="paragraph">
@@ -99,9 +100,9 @@
 
 
         </article>
-        <a href="home.html" class="button">alle Vereine</a>
+        <a href="Index.html" class="button">alle Vereine</a>
 
-        <img src="../Images/Home/15_Bild.png" alt="Symbolbild Basketball" class="roundImage">
+        <img src="Images/Angebot/Basketball.jpg" alt="Symbolbild Basketball" class="roundImage" id="basketball">
 
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
         </section>
@@ -125,7 +126,7 @@
             <p class="footerText">Fr: bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
-            <a href="home.html" class="footerText">Home</a>
+            <a href="Index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
@@ -134,10 +135,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
 
         </section>
 
