--- a/ueberuns.html
+++ b/ueberuns.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <title>Über uns</title>
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-
-    <link rel="stylesheet" href="../CSS/ueberuns.css">
+    <link rel="stylesheet" href="CSS/ueberuns.css">
+    <link rel="icon" href="Images/Logo.png">
 </head>
 
 <body>
@@ -17,18 +17,18 @@
 
         <section class="toolbar">
             <div class="toolbarLeft">
-                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
-            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
             </div>
         </section>
 
-        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <div class="menu-container">
-            <a href="home.html" class="button">Home</a>
+            <a href="index.html" class="button">Home</a>
             <a href="angebot.html" class="button">Angebot</a>
             <a href="ueberuns.html" class="button" id="buttonActive">Über uns</a>
             <a href="kontakt.html" class="button">Kontakt</a>
@@ -56,7 +56,7 @@
 
         <section class="team">
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Quadrate/Janic def.jpg" alt="Portrait Janic" class="bildPortrait">
+                <img src="Images/ueberuns/Quadrate/Janic def.jpg" alt="Portrait Janic" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Janic</h2>
@@ -68,7 +68,7 @@
             </article>
 
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Quadrate/Jazz def.jpg" alt="Portrait Jazz" class="bildPortrait">
+                <img src="Images/ueberuns/Quadrate/Jazz def.jpg" alt="Portrait Jazz" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Jazz</h2>
@@ -83,7 +83,7 @@
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Quadrate/Mali.jpg" alt="Portrait Mali" class="bildPortrait">
+                <img src="Images/ueberuns/Quadrate/Mali.jpg" alt="Portrait Mali" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Mali</h2>
@@ -96,7 +96,7 @@
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Quadrate/Sigi def.jpg" alt="Portrait Sigi" class="bildPortrait">
+                <img src="Images/ueberuns/Quadrate/Sigi def.jpg" alt="Portrait Sigi" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Sigi</h2>
@@ -109,7 +109,7 @@
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Quadrate/Zoé def.jpg" alt="Portrait Zoé" class="bildPortrait">
+                <img src="Images/ueberuns/Quadrate/Zoé def.jpg" alt="Portrait Zoé" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Zoé</h2>
@@ -215,7 +215,7 @@
         </section>
 
         <section class="footerTextContainer" id="footerColumn3">
-            <a href="home.html" class="footerText">Home</a>
+            <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
@@ -224,10 +224,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
         </section>
 
     </footer>
