--- a/impressum.html
+++ b/impressum.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BÄRNLÄBT Impressum</title>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <title>Impressum</title>
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
-    <link rel="stylesheet" href="../CSS/impressum.css">
+    <link rel="stylesheet" href="CSS/impressum.css">
+    <link rel="icon" href="Images/Logo.png">
 </head>
 
 
@@ -16,18 +17,18 @@
 
         <section class="toolbar">
             <div class="toolbarLeft">
-                <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
             </div>
-            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
             </div>
         </section>
 
-        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
+        <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <div class="menu-container">
-            <a href="home.html" class="button">Home</a>
+            <a href="index.html" class="button">Home</a>
             <a href="angebot.html" class="button">Angebot</a>
             <a href="ueberuns.html" class="button">Über uns</a>
             <a href="kontakt.html" class="button">Kontakt</a>
@@ -89,7 +90,7 @@
             <p class="footerText">Fr: bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
-            <a href="home.html" class="footerText">Home</a>
+            <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
@@ -98,10 +99,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="../Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
 
         </section>
 
