--- a/angebot.html
+++ b/angebot.html
@@ -13,25 +13,24 @@
 
 
 <body>
+    <section class="toolbar">
+        <div class="toolbarLeft">
+            <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+            <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
+        </div>
+        <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+            <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+        </div>
+    </section>
 
     <header>
-        <section class="toolbar">
-            <div class="toolbarLeft">
-                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-            </div>
-            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-            </div>
-        </section>
-
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="Index.html" class="button">Home</a>
-            <a href="angebot.html" class="button" id="buttonActive">Angebot</a>
-            <a href="ueberuns.html" class="button">Über uns</a>
-            <a href="kontakt.html" class="button">Kontakt</a>
+            <a href="index.html" class="button menu" id="buttonActive">Home</a>
+            <a href="angebot.html" class="button menu">Angebot</a>
+            <a href="ueberuns.html" class="button menu">Über uns</a>
+            <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
 
     </header>
@@ -45,8 +44,8 @@
             </article>
             <article class="mapKalender">
 
-                <img src="Images/Logo.png" alt="Eventkarte" class="eventKarte">
-                <img src="Images/Logo.png" alt="Eventkalender" class="eventKarte">
+                <img src="Images/Angebot/Karte.png" alt="Karte von der Stadt Bern mit verschiedenen Events, angezeigt wird ein Töpferkurs." class="eventKarte">
+                <img src="Images/Angebot/Kalender.png" alt="Kalender auf dem Die Events angezeigt werden." class="eventKarte">
 
             </article>
 
