--- a/index.html
+++ b/index.html
@@ -22,17 +22,8 @@
         </div>
     </section>
     <header>
-        <section class="toolbar">
-            <div class="toolbarLeft">
-                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-            </div>
-            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-            </div>
-        </section>
         <img src="Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
-        <h1>wöus zäme meh fäggt! 25</h1>
+        <h1>wöus zäme meh fäggt!</h1>
 
         <section class="menu-container">
             <a href="index.html" class="button menu" id="buttonActive">Home</a>
@@ -41,7 +32,7 @@
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
 
-        <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
+        <p id="headerUnterschrift">BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
     </header>
     <main>
         <section>
