--- a/kontakt.html
+++ b/kontakt.html
@@ -12,24 +12,25 @@
 </head>
 
 <body>
+    <section class="toolbar">
+        <div class="toolbarLeft">
+            <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+            <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
+        </div>
+        <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+            <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+        </div>
+    </section>
     <header>
-        <section class="toolbar">
-            <div class="toolbarLeft">
-                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-            </div>
-            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-            </div>
-        </section>
+
 
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="index.html" class="button">Home</a>
-            <a href="angebot.html" class="button" >Angebot</a>
-            <a href="ueberuns.html" class="button" >Über uns</a>
-            <a href="kontakt.html" class="button" id="buttonActive">Kontakt</a>
+            <a href="index.html" class="button menu" id="buttonActive">Home</a>
+            <a href="angebot.html" class="button menu">Angebot</a>
+            <a href="ueberuns.html" class="button menu">Über uns</a>
+            <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
 
     </header>
