Bilder angepasst , Code Validiert, button breiten korrigiert, duplikate im Code bereinigt.

--- a/angebot.html
+++ b/angebot.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="CSS/angebot.css">
-    <link rel="icon" href="Images/Logo.png">
+    <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
 
@@ -27,8 +27,8 @@
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="index.html" class="button menu" id="buttonActive">Home</a>
-            <a href="angebot.html" class="button menu">Angebot</a>
+            <a href="index.html" class="button menu" >Home</a>
+            <a href="angebot.html" class="button menu" id="buttonActive">Angebot</a>
             <a href="ueberuns.html" class="button menu">Über uns</a>
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
@@ -50,8 +50,9 @@
             </article>
 
             <article class="suchbox">
-                <p>Uf was häsch bock?</p>
-                <img src="Images/Icons/Profil.png" alt="suche" id="suchIcon">
+                <input type="text" id="bock" name="email" placeholder="Uf was häsch du bock?" required>
+        
+                <img src="Images/Icons/Lupe.png" alt="SuchIcon" id="suchIcon">
 
             </article>
 
@@ -59,7 +60,7 @@
                 <p class="paragraphTitel center">Mach den ersten Schritt</p>
                 <p class="paragraphText center" >Neugierig auf neue Gspändli in deiner Umgebung?</p>
                 <div class=einladungAnmeldung>
-                    <p id="anmeldung">Anmeldung</p>
+                    <p id="anmeldung">Anmelden</p>
                     <p id="registrieren">Registrieren</p>
                 </div>
             </article>
