--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="CSS/impressum.css">
-    <link rel="icon" href="Images/Logo.png">
+    <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
 
@@ -30,7 +30,7 @@
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="index.html" class="button menu" id="buttonActive">Home</a>
+            <a href="index.html" class="button menu">Home</a>
             <a href="angebot.html" class="button menu">Angebot</a>
             <a href="ueberuns.html" class="button menu">Über uns</a>
             <a href="kontakt.html" class="button menu">Kontakt</a>
