--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/home.css">
-    <link rel="icon" href="Images/Logo.png">
+    <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
 <body>
