--- a/kontakt.html
+++ b/kontakt.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="CSS/kontakt.css">
-    <link rel="icon" href="Images/Logo.png">
+    <link rel="icon" href="Images/Icons/LogoKleinTab.png" class="tabLogo">
 </head>
 
 <body>
@@ -27,14 +27,14 @@
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="index.html" class="button menu" id="buttonActive">Home</a>
+            <a href="index.html" class="button menu">Home</a>
             <a href="angebot.html" class="button menu">Angebot</a>
             <a href="ueberuns.html" class="button menu">Über uns</a>
-            <a href="kontakt.html" class="button menu">Kontakt</a>
+            <a href="kontakt.html" class="button menu"  id="buttonActive">Kontakt</a>
         </section>
 
     </header>
-    <img src="Logo" alt="Karte Bern mit Illustrationen" class="bildKontakt">
+    <img src="Images/Kontakt/KontaktKarte.png" alt="Karte Bern mit Illustrationen" class="bildKontakt">
     <main>
         <div class="kontaktUeberschriftContainer">
             <h3 id="haeufe"> Mer häufed gärn! </h3>
