main durch Divs ersetzt

--- a/angebot.html
+++ b/angebot.html
@@ -27,44 +27,46 @@
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
-            <a href="index.html" class="button menu" >Home</a>
+            <a href="index.html" class="button menu">Home</a>
             <a href="angebot.html" class="button menu" id="buttonActive">Angebot</a>
             <a href="ueberuns.html" class="button menu">Über uns</a>
             <a href="kontakt.html" class="button menu">Kontakt</a>
         </section>
 
     </header>
-    <main>
+    <div class="main">
         <section class="sectionCalendar">
             <article class="datumswahl">
                 <p class="datumPfeile">
-                    < </p>
+                    &lt;</p>
                         <p class="datum">Heute</p>
-                        <p class="datumPfeile">></p>
+                        <p class="datumPfeile">&gt;</p>
             </article>
             <article class="mapKalender">
 
-                <img src="Images/Angebot/Karte.png" alt="Karte von der Stadt Bern mit verschiedenen Events, angezeigt wird ein Töpferkurs." class="eventKarte">
-                <img src="Images/Angebot/Kalender.png" alt="Kalender auf dem Die Events angezeigt werden." class="eventKarte">
+                <img src="Images/Angebot/Karte.png"
+                    alt="Karte von der Stadt Bern mit verschiedenen Events, angezeigt wird ein Töpferkurs."
+                    class="eventKarte">
+                <img src="Images/Angebot/Kalender.png" alt="Kalender auf dem Die Events angezeigt werden."
+                    class="eventKarte">
 
             </article>
 
             <article class="suchbox">
                 <input type="text" id="bock" name="email" placeholder="Uf was häsch du bock?" required>
-        
+
                 <img src="Images/Icons/Lupe.png" alt="SuchIcon" id="suchIcon">
 
             </article>
 
             <article class="einladungBox">
                 <p class="paragraphTitel center">Mach den ersten Schritt</p>
-                <p class="paragraphText center" >Neugierig auf neue Gspändli in deiner Umgebung?</p>
+                <p class="paragraphText center">Neugierig auf neue Gspändli in deiner Umgebung?</p>
                 <div class=einladungAnmeldung>
-                    <p id="anmeldung">Anmelden</p>
-                    <p id="registrieren">Registrieren</p>
+                    <a id="anmelden">Anmelden</a>
+                    <a id="registrieren">Registrieren</a>
                 </div>
             </article>
-
         </section>
         <section class="sectionBeschreibung">
             <h3 id="schnöigge">chasch ruhig chli schnöigge</h3>
@@ -74,13 +76,14 @@
                 <p class="paragraphText">Wir helfen dir, die ideale Beglietung zu finden, damit du nicht alleine
                     losziehen must.</p>
             </article>
-    </main>
+        </section>
+    </div>
     <section class="angebotLink">
-            <a href="impressum.html" id="zurKarte">zur Karte</a>
-            <a href="impressum.html" id="zumKalender">zum Kalender</a>
-    
+        <a href="impressum.html" id="zurKarte">zur Karte</a>
+        <a href="impressum.html" id="zumKalender">zum Kalender</a>
+
     </section>
-    <main>
+    <div class="main">
         <h3 id="weird">«Egau, wie weird du besch, do dosse gets no öpper wo genauso tickt.»</h3>
         <article class="paragraph">
             <p class="paragraphTitel">Möchtest du einen eigenen Event organisieren?</p>
@@ -105,8 +108,7 @@
         <img src="Images/Angebot/Basketball.jpg" alt="Symbolbild Basketball" class="roundImage" id="basketball">
 
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
-        </section>
-    </main>
+    </div>
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
