--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <p id="headerUnterschrift">BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
     </header>
-    <main>
+    <div class="main">
         <section>
             <Article class="teaser">
                 <div class= "teaserImageBox">
@@ -120,7 +120,7 @@
                 <div>
                     <h2 class="eventTitel">Turnhalle - E.Grooves</h2>
                     <p> Bist du bereit, die Tanzfläche zum Beben zu bringen? Eclectic Grooves ist die Party auf der du
-                        deine Hüftn schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ WIZ
+                        deine Hüften schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ WIZ
                         mitreissen und tanze bis in die frühen Morgenstunden. </p>
 
                 </div>
@@ -172,7 +172,7 @@
             </article>
 
         </section>
-    </main>
+    </div class="main">
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -189,7 +189,9 @@
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
+    
+            <p class="footerText">Fr:</p>
+            <p class="footerText">bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
