--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
 
     </header>
     <img src="Images/Kontakt/KontaktKarte.png" alt="Karte Bern mit Illustrationen" class="bildKontakt">
-    <main>
+    <div class="main">
         <div class="kontaktUeberschriftContainer">
             <h3 id="haeufe"> Mer häufed gärn! </h3>
             <div class="kontaktDatenContainer">
@@ -54,13 +54,8 @@
                 <input type="submit" value="Absenden" id="absenden">
             </form>
         </div>
-
-
-
-        </div>
         <a class="button" id="impressum" href="impressum.html"> Impressum </a>
-        </div>
-    </main>
+    </div class="main">
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
@@ -84,7 +79,7 @@
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
-            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
 
