Toolbar aus in header getan

--- a/angebot.html
+++ b/angebot.html
@@ -13,6 +13,7 @@
 
 
 <body>
+    <header>
     <section class="toolbar">
         <div class="toolbarLeft">
             <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
@@ -23,7 +24,7 @@
         </div>
     </section>
 
-    <header>
+
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
@@ -53,7 +54,7 @@
             </article>
 
             <article class="suchbox">
-                <input type="text" id="bock" name="email" placeholder="Uf was häsch du bock?" required>
+                <input type="text" id="bock" name="email" placeholder="Uf was häsch bock?" required>
 
                 <img src="Images/Icons/Lupe.png" alt="SuchIcon" id="suchIcon">
 
@@ -63,8 +64,8 @@
                 <p class="paragraphTitel center">Mach den ersten Schritt</p>
                 <p class="paragraphText center">Neugierig auf neue Gspändli in deiner Umgebung?</p>
                 <div class=einladungAnmeldung>
-                    <a id="anmelden">Anmelden</a>
-                    <a id="registrieren">Registrieren</a>
+                    <a href=# id="anmelden">Anmelden</a>
+                    <a href=# id="registrieren">Registrieren</a>
                 </div>
             </article>
         </section>
@@ -79,8 +80,8 @@
         </section>
     </div>
     <section class="angebotLink">
-        <a href="impressum.html" id="zurKarte">zur Karte</a>
-        <a href="impressum.html" id="zumKalender">zum Kalender</a>
+        <a href=# id="zurKarte">zur Karte</a>
+        <a href=# id="zumKalender">zum Kalender</a>
 
     </section>
     <div class="main">
@@ -125,10 +126,11 @@
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
+            <p class="footerText">Fr: </p>
+            <p class="footerText">bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
-            <a href="Index.html" class="footerText">Home</a>
+            <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
             <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
@@ -137,10 +139,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="TikTok Icon" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
 
         </section>
 
