--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 </head>
 
 <body>
-    <section class="toolbar">
-        <div class="toolbarLeft">
-            <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-            <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
-        </div>
-        <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
-            <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
-        </div>
-    </section>
+
     <header>
+
+        <section class="toolbar">
+            <div class="toolbarLeft">
+                <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
+                <img src="Images/Icons/Home.png" alt="Home" class="headerIcons">
+            </div>
+            <div class="toolbarRight"><img src="Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
+
         <img src="Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
         <h1>wöus zäme meh fäggt!</h1>
 
@@ -37,9 +40,10 @@
     <div class="main">
         <section>
             <Article class="teaser">
-                <div class= "teaserImageBox">
-                    <img src="Images/Home/BildGspaendli.jpeg" alt="vier freunde sitzen gemütlich beieinander" class="teaserimage"
-                       ></div>
+                <div class="teaserImageBox">
+                    <img src="Images/Home/BildGspaendli.jpeg" alt="vier freunde sitzen gemütlich beieinander"
+                        class="teaserimage">
+                </div>
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Gspändli finden</h2>
                     <p class="teaserTextRechts">Bist du neu in Bern? möchtest du soziale Kontakte knüpfen? Lust auf
@@ -59,9 +63,10 @@
                     </p>
                     <a href="angebot.html" class="button">Mehr erfahren</a>
                 </div>
-                <div class= "teaserImageBox">
-                <img src="Images/Home/BildEvent.jpeg" alt="Symbolbild 4 junge menschen an einer Party" class="teaserimage"
-                ></div>
+                <div class="teaserImageBox">
+                    <img src="Images/Home/BildEvent.jpg" alt="Symbolbild 4 junge menschen an einer Party"
+                        class="teaserimage">
+                </div>
 
             </article>
 
@@ -74,9 +79,10 @@
             </article>
 
             <Article class="teaser">
-                <div class= "teaserImageBox">
-                <img src="Images/Home/BildEventErstellen.jpeg" alt="Symbolbild 4 junge menschen an einer Party"
-                    class="teaserimage"></div>
+                <div class="teaserImageBox">
+                    <img src="Images/Home/BildEventErstellen.jpg" alt="Symbolbild 4 junge menschen an einer Party"
+                        class="teaserimage">
+                </div>
                 <div class="teaserBoxRechts">
                     <h2 class="teaserTextRechts">Event erstöue</h2>
                     <p class="teaserTextRechts">Aus BÄRNLÄBT kannst du auch deinen eigenen Event erstellen und
@@ -94,14 +100,15 @@
                     </p>
                     <a href="angebot.html" class="button">Mehr erfahren</a>
                 </div>
-                <div class= "teaserImageBox">
-                <img src="Images/Home/BildHobby.png" alt="Ein Junger Mann beim Surfen" class="teaserimage"> </div>
+                <div class="teaserImageBox">
+                    <img src="Images/Home/BildHobby.png" alt="Ein Junger Mann beim Surfen" class="teaserimage">
+                </div>
             </article>
         </section>
         <Section class="eventliste">
             <h2>Aktuelle Events</h2>
 
-            <article class="event" id="eventGrün">
+            <article class="event" id="eventPink">
                 <div>
                     <h2 class="eventTitel">Berner Kulturfestival</h2>
                     <p>Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und Kreativität! Tauche
@@ -120,7 +127,8 @@
                 <div>
                     <h2 class="eventTitel">Turnhalle - E.Grooves</h2>
                     <p> Bist du bereit, die Tanzfläche zum Beben zu bringen? Eclectic Grooves ist die Party auf der du
-                        deine Hüften schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ WIZ
+                        deine Hüften schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ
+                        WIZ
                         mitreissen und tanze bis in die frühen Morgenstunden. </p>
 
                 </div>
@@ -130,11 +138,11 @@
                 </div>
 
             </article>
-            <article class="event" id="eventPink">
+            <article class="event" id="eventGrün">
                 <div>
                     <h2 class="eventTitel">Streetfood-Festival 2023</h2>
                     <p>Freue dich auf kulinarische Höhepunkte beim Berner Streetfoodfestival 2023. Auf BÄRNLÄBT kannst
-                        du deine kulinarischen Vorlieben teilen und die passende Begleitung finden. Sei dabei ! </p>
+                        du deine kulinarischen Vorlieben teilen und die passende Begleitung finden. Sei dabei! </p>
 
                 </div>
                 <div class="eventDatum">
@@ -189,8 +197,7 @@
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-    
-            <p class="footerText">Fr:</p>
+            <p class="footerText">Fr: </p>
             <p class="footerText">bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
@@ -203,10 +210,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="TikTok Icon" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
 
         </section>
 
