--- a/kontakt.html
+++ b/kontakt.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <header>
     <section class="toolbar">
         <div class="toolbarLeft">
             <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
@@ -21,7 +22,6 @@
             <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
         </div>
     </section>
-    <header>
 
 
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
@@ -30,11 +30,18 @@
             <a href="index.html" class="button menu">Home</a>
             <a href="angebot.html" class="button menu">Angebot</a>
             <a href="ueberuns.html" class="button menu">Über uns</a>
-            <a href="kontakt.html" class="button menu"  id="buttonActive">Kontakt</a>
+            <a href="kontakt.html" class="button menu" id="buttonActive">Kontakt</a>
         </section>
 
     </header>
     <img src="Images/Kontakt/KontaktKarte.png" alt="Karte Bern mit Illustrationen" class="bildKontakt">
+    <div class="boxKarte">
+        <p class="textKarte"> BÄRNLÄBT</p>
+        <p class="textKarte"> Holzikofenweg 8</p>
+        <p class="textKarte"> 3000 Bern</p>
+    </div>
+
+
     <div class="main">
         <div class="kontaktUeberschriftContainer">
             <h3 id="haeufe"> Mer häufed gärn! </h3>
@@ -46,7 +53,8 @@
 
         <div class="kontaktFormularContainer">
             <form action="kontakt.html" class="kontaktFormular">
-                <textarea id="nachricht" name="nachricht" placeholder="Was interessiert dich schon lange?" required></textarea>
+                <textarea id="nachricht" name="nachricht" placeholder="Was interessiert dich schon lange?"
+                    required></textarea>
                 <input type="text" id="name" placeholder="Name" required>
 
                 <input type="email" id="email" name="email" placeholder="E-Mail" required>
@@ -67,15 +75,14 @@
             <p class="footerText">+41 31 333 31 01</p>
 
         </section>
-
         <section class="footerTextContainer" id="footerColumn2">
             <p class="footerTitel">Öffnungszeiten</p>
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
+            <p class="footerText">Fr: </p>
+            <p class="footerText">bis 16:00 Uhr</p>
         </section>
-
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
@@ -86,10 +93,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="TikTok Icon" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
 
         </section>
 
