--- a/ueberuns.html
+++ b/ueberuns.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+    <header>
     <section class="toolbar">
         <div class="toolbarLeft">
             <img src="Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
@@ -21,9 +23,6 @@
             <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
         </div>
     </section>
-    <header>
-
-
 
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
@@ -204,16 +203,16 @@
             <p class="footerTitel">Kontakt</p>
             <p class="footerText">info@baernlaebt.ch</p>
             <p class="footerText">+41 31 333 31 01</p>
-        </section>
 
+        </section>
         <section class="footerTextContainer" id="footerColumn2">
             <p class="footerTitel">Öffnungszeiten</p>
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
+            <p class="footerText">Fr: </p>
+            <p class="footerText">bis 16:00 Uhr</p>
         </section>
-
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
@@ -224,10 +223,11 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="TikTok Icon" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
+
         </section>
 
     </footer>
