--- a/impressum.html
+++ b/impressum.html
@@ -13,7 +13,7 @@
 
 
 <body>
-
+    <header>
     
     <section class="toolbar">
         <div class="toolbarLeft">
@@ -24,7 +24,7 @@
             <img src="Images/Icons/Profil.png" alt="Profil" class="headerIcons">
         </div>
     </section>
-    <header>
+
 
 
         <img src="Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
@@ -89,7 +89,8 @@
             <p class="footerText">Mo-Do:</p>
             <p class="footerText">8:00 bis 11:45 Uhr</p>
             <p class="footerText">13:00 bis 17:00 Uhr</p>
-            <p class="footerText">Fr: bis 16:00 Uhr</p>
+            <p class="footerText">Fr: </p>
+            <p class="footerText">bis 16:00 Uhr</p>
         </section>
         <section class="footerTextContainer" id="footerColumn3">
             <a href="index.html" class="footerText">Home</a>
@@ -101,10 +102,10 @@
         </section>
 
         <section class="footerSoMeContainer " id="footerColumn4">
-            <img src="Images/Icons/TikTok.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
-            <img src="Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
+            <img src="Images/Icons/TikTok.png" alt="TikTok Icon" class="footerSoMe">
+            <img src="Images/Icons/Instagram.png" alt="Instagram Icon" class="footerSoMe">
+            <img src="Images/Icons/Facebook.png" alt="Facebook Icon" class="footerSoMe">
+            <img src="Images/Icons/X.png" alt="X Icon" class="footerSoMe">
 
         </section>
 
