Switched media querry from 450 to 480.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </article>
 
         </section>
-    </div class="main">
+    </div>
     <footer>
         <section class="footerTextContainer" id="footerColumn1">
             <p class="footerTitel">BÄRNLÄBT GmbH</p>
